[workspace]
members = [
    "pubky-transport",
    "swap-common",
    "lightning",
    "swap-provider",
    "swap-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Corey Phillips"]
license = "MIT"

[workspace.dependencies]
# Bitcoin (P2WSH HTLC MVP; Taproot/MuSig2 is a planned phase-2 upgrade — see ROADMAP.md)
bitcoin = "0.30"

# Pubky & Pkarr (same versions proven in bitcoin-batch-coordinator)
pubky-messenger = { version = "0.3.0" }
pkarr = "3.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
blake3 = "1.5"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"

# CLI / logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
pubky-transport = { path = "pubky-transport" }
swap-common = { path = "swap-common" }
lightning-backend = { path = "lightning" }
swap-client = { path = "swap-client" }
