[package]
name = "pubky-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic, message-type-agnostic transport over pubky-messenger (encrypted DMs + follow-graph peer discovery)"

[dependencies]
pubky-messenger.workspace = true
pkarr.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
