[package]
name = "swap-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "pubky-swap client: discover providers, request quotes, and drive a swap"

[dependencies]
pubky-transport.workspace = true
swap-common.workspace = true
lightning-backend.workspace = true
bitcoin.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
async-trait.workspace = true
